fixing one small thing on mobile

--- a/main.css
+++ b/main.css
@@ -789,7 +789,7 @@ text-justify: inter-word;
     min-height: 200px; 
   }
 
-  #winner2021{
+  #winners2021{
     height: 90%;
     width: 90%; 
     flex-direction: column;
